# Judgify-core

./: .env.development  .env.example  .env.testing  .gitignore  .mcp.json  .mcp.template.json  CHANGELOG.md  CLAUDE.md  CLAUDE_OPTIMIZATION_COMPARISON.md  CLAUDE_기준.md  CONTRIBUTING.md  DATABASE_VIEWER_IMPLEMENTATION.md  DEMO_SCRIPT.md  DEVELOPMENT-CHECKLIST.md  Debug_Report.md  EXECUTE-INSTRUCTIONS.md  EXECUTE-NOW.ps1  GETTING-STARTED.md  IMPLEMENTATION-STATUS.md  INSTALL.md  LICENSE  MES_API_ERROR_DEBUG.md  MES_DATA_ACCUMULATION_UPDATE.md  MES_RAG_TEST_GUIDE.md  PHASE_COMPARISON.md  PROJECT-STATUS.md  Phase22-Summary.md  Phase32-Summary.md  Phase33-Summary.md  Phase34-Summary.md  Phase35-Summary.md  QUICKSTART.md  README-DESKTOP-FINAL.md  README-DESKTOP.md  README-SETUP.md  README.md  RUN-LOCALLY.md  SECURITY.md  SETUP.md  START-HERE.md  (+33 more)
common/: README.md  pyproject.toml
common/common/: __init__.py
common/common/base/: __init__.py  base_model.py  base_repository.py  base_service.py
common/common/exceptions/: __init__.py  base.py  not_found.py  unauthorized.py  validation.py
common/common/middleware/: __init__.py  auth.py  cors.py  error_handler.py
common/common/utils/: __init__.py  cache.py  database.py  logger.py  validators.py
common/tests/: __init__.py  test_base_service.py
src-tauri/: Cargo.toml  benchmark_output.txt  judgify.db  tauri.conf.json
src-tauri/benches/: cache_benchmark.rs  complex_query_benchmark.rs  db_benchmark.rs  feedback_benchmark.rs  judgment_benchmark.rs  training_sample_benchmark.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_ccp_docs.sql  001_knowledge_base.sql  002_erp_schema.sql  003_mes_schema.sql  004_ccp_seed_data.sql  004_seed_knowledge.sql  005_seed_erp_master.sql  006_seed_erp_transaction.sql  007_seed_mes.sql  008_seed_sales_history.sql  009_seed_2025_sales.sql  010_additional_erp_mes.sql  011_seed_additional.sql  012_seed_erp_extended.sql  013_seed_mes_extended.sql  014_seed_mes_complete.sql  015_seed_erp_2025_full.sql  016_seed_recent_sensor_data.sql  017_fix_warehouse_inventory_mapping.sql
src-tauri/migrations_backup/: 002_create_ccp_sensors.sql  003_create_ccp_judgments.sql  004_ccp_seed_data_fixed.sql  005_create_mes_data.sql  006_create_workflow_executions.sql
src-tauri/nsis/: hooks.nsi
src-tauri/scripts/: generate_sample_data.py  init_schema.sql
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/algorithms/: decision_tree_converter.rs  frequency_analyzer.rs  llm_pattern_discoverer.rs  mod.rs  rule_integrator.rs
src-tauri/src/commands/: backup.rs  bi.rs  ccp.rs  chart.rs  chat.rs  database.rs  judgment.rs  learning.rs  mes.rs  mod.rs  system.rs  update.rs  workflow.rs  workflow_types.rs  workflow_v2.rs
src-tauri/src/database/: backup.rs  migrations.rs  mod.rs  models.rs  seed.rs  sqlite.rs
src-tauri/src/engines/: mod.rs  rule_engine.rs
src-tauri/templates/: alarm_status.txt  bom_material_usage.txt  ccp_pass_rate.txt  ccp_types.txt  checklist_compliance.txt  defect_rate.txt  equipment_downtime.txt  inbound_trend.txt  inventory_movement.txt  line_production.txt  metal_detection_history.txt  monthly_production_trend.txt  monthly_sales.txt  oee_gauge.txt  operator_productivity.txt  outbound_status.txt  outbound_trend.txt  production_achievement.txt  quality_inspection.txt  sales_trend.txt  shift_performance.txt  temperature_trend.txt  vendor_delivery.txt  warehouse_inventory.txt
src-tauri/tests/: workflow_simulation_integration_test.rs
(+337 files in other folders)
