[package]
name = "judgify-desktop"
version = "0.3.0"  # Managed by version.py + scripts/bump_version.py
description = "Judgify AI 판단 플랫폼 - Windows Desktop"
authors = ["Judgify Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "judgify-desktop"
path = "src/main.rs"

[lib]
name = "judgify_desktop"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "system-tray", "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
rhai = "1.16"
tiktoken-rs = "0.5"
dirs = "5.0"
rand = "0.8"
dotenvy = "0.15"
lru = "0.12"
handlebars = "5.1"
smartcore = "0.3"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
flate2 = "1.0"  # gzip 압축/해제
keyring = "2.3"  # Windows Credential Manager / macOS Keychain / Linux Secret Service

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"  # 테스트용 임시 파일

[[bench]]
name = "db_benchmark"
harness = false

[[bench]]
name = "judgment_benchmark"
harness = false

[[bench]]
name = "training_sample_benchmark"
harness = false

[[bench]]
name = "cache_benchmark"
harness = false

[[bench]]
name = "feedback_benchmark"
harness = false

[[bench]]
name = "complex_query_benchmark"
harness = false

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
